text truncate fix

--- a/src/App.css
+++ b/src/App.css
@@ -104,6 +104,7 @@ div.mapview {
 .card-item{
   flex-grow: 1;
   flex-basis: 0;
+  width: 17.5%;
 }
 
 .card-title{
@@ -118,6 +119,11 @@ div.mapview {
   font-weight: 500;
   padding: 1rem 1.5rem 3rem 2.5rem;
 }
+/* span {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+} */
 .card-border-wrapper{
   display: flex;
   justify-content: space-between;
@@ -139,9 +145,12 @@ div.mapview {
   }
   .card-area{
     width: 90vw;
-    margin-top: -9.1vh;
+    margin-top: -11vh;
     flex-direction: column;
     align-items: center;
+  }
+  .card-item{
+    width: unset;
   }
   .card-right-border{
     display: none;
